@@ -15,6 +15,8 @@ FIXES:
 
 - improve script editing performance again
 
+- fix crash if sound card(s) hardware/driver setup changed
+
 - see Scripts.txt for the actual usage and "documentation" of the scripts that come with VPX
 
 VP 10.7.3 Changelog
